# bibtex-parser

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .stignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PYTHON.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  ROADMAP.md  RUST.md  manifest.scm  pyproject.toml  setup-dev.sh
.github/: actionlint.yaml
.github/workflows/: ci.yml  release.yml  rust.yml
benches/: compare.rs  delimiter.rs  memory.rs  parallel.rs  parser.rs  performance.rs  tugboat_compare.rs
benchmarks/reports/: latest.md  report_20250608_233654.md  report_20250609_004428.md  report_20250609_072637.md
examples/: basic.rs  latex_unicode.rs  query.rs  tolerant.rs  validation.rs
python/benchmarks/: benchmark_parser.py  compare_parsers.py
python/bibtex_parser/: __init__.py  __init__.pyi
python/citerra/: __init__.py  __init__.pyi
scripts/: benchmark.py
src/: corpus.rs  database.rs  document.rs  error.rs  fixtures.rs  latex_unicode.rs  lib.rs  library.rs  model.rs  python.rs  source.rs  writer.rs
src/parser/: delimiter.rs  entry.rs  lexer.rs  mod.rs  simd.rs  utils.rs  value.rs
tests/: corpus_parsing.rs  diagnostics.rs  document_model.rs  editing_primitives.rs  integration_tests.rs  low_churn_writer.rs  memory_optimization.rs  semantic_helpers.rs  source_locations.rs  source_preservation.rs  streaming_events.rs  tolerant_recovery.rs  tooling_regression_corpus.rs  value_views.rs
tests/fixtures/: complex.bib  malformed.bib  simple.bib
tests/python/: test_native_api.py
