[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "citerra"
version = "0.3.0"
description = "BibTeX parser for Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Ayan Das", email = "bvits@riseup.net" }]
keywords = ["bibtex", "parser", "latex", "bibliography", "citation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/b-vitamins/citerra"
Repository = "https://github.com/b-vitamins/citerra"
Documentation = "https://github.com/b-vitamins/citerra#readme"
Changelog = "https://github.com/b-vitamins/citerra/blob/master/CHANGELOG.md"

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "citerra._native"
features = ["python-extension", "latex_to_unicode"]
strip = true
